[gd_scene format=3 uid="uid://ba37plnvujw2v"]

[ext_resource type="Script" uid="uid://d4e6eqgr2nku5" path="res://Scripts/menu.gd" id="1_xhh6f"]
[ext_resource type="Theme" uid="uid://b8c7573tcyyga" path="res://tema.tres" id="2_cayip"]
[ext_resource type="PackedScene" uid="uid://b8pc0to2vfp8y" path="res://Scenes/menu_1.tscn" id="3_158mb"]
[ext_resource type="PackedScene" uid="uid://bj12otqkbi5kd" path="res://Scenes/menu_2.tscn" id="4_158mb"]

[node name="Menu" type="Control" unique_id=467393548]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xhh6f")

[node name="Background" type="ColorRect" parent="." unique_id=1320186764]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=234139541]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 20

[node name="Title" type="Label" parent="MarginContainer" unique_id=22553248]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("2_cayip")
text = "PONG"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer" unique_id=1193079813]
layout_mode = 2

[node name="Menu1" parent="MarginContainer/CenterContainer" unique_id=1628060321 instance=ExtResource("3_158mb")]
layout_mode = 2

[node name="Sair" parent="MarginContainer/CenterContainer/Menu1" index="1" unique_id=1549433890]
text = "SAIR DO JOGO"

[node name="Menu2" parent="MarginContainer/CenterContainer" unique_id=1539423660 instance=ExtResource("4_158mb")]
visible = false
layout_mode = 2

[node name="Controles" type="Label" parent="MarginContainer" unique_id=456108611]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Jogador 1 = Seta Cima/Baixo
Jogador 2 = W/S
Resetar Partida = R
Sair da Partida = ESC"

[connection signal="pressed" from="MarginContainer/CenterContainer/Menu1/Jogar" to="." method="_on_jogar_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/Menu1/Sair" to="." method="_on_sair_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/Menu2/HBoxContainer/UmJogador" to="." method="_on_um_jogador_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/Menu2/HBoxContainer/DoisJogadores" to="." method="_on_dois_jogadores_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/Menu2/Voltar" to="." method="_on_voltar_pressed"]

[editable path="MarginContainer/CenterContainer/Menu1"]
[editable path="MarginContainer/CenterContainer/Menu2"]
